<resources>
    <string name="app_name">Service Providers</string>
    <string name="signuphere"><u>Click here to create a new account</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loginhere">Click here to use an existing account</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_firstName">First Name</string>
    <string name="enter_lastName">Last Name</string>
    <string name="enter_phone">Phone Number</string>
    <string name="account_type">Account Type: </string>
    <string name="logo">logo</string>
    <string name="enter_serviceName">Service Name</string>
    <string name="enter_servicePrice">Price of Service</string>
    <string-array name="accountTypes">
        <item>HomeOwner</item>
        <item>ServiceProvider</item>
        <item>Administrator</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_services">Add Services</string>
    <string name="services_availability">Services Availability</string>
    <string name="txt_view_welcome">Welcome to the application!</string>
    <string name="complete_profile">Complete Profile</string>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="btn_save">Save</string>
    <string-array name="time_slots">
        <item>08:00 &#8211; 10:00</item>
        <item>10:00 &#8211; 12:00</item>
        <item>12:00 &#8211; 14:00</item>
        <item>14:00 &#8211; 16:00</item>
        <item>16:00 &#8211; 18:00</item>
        <item>18:00 &#8211; 20:00</item>
    </string-array>
    <string name="weekdayChoice">Choose a weekday:</string>
    <string name="timeSlotChoice">Choose a time slot:</string>
    <string name="txt_view_listOfAvailability">List of Availability:</string>
    <string name="btn_Update">Update</string>
    <string name="btn_Delete">Delete</string>
    <string name="enter_building_num">#</string>

    <string name="enter_street_name">Street Name</string>

    <string name="enter_city">City</string>


    -
    <string-array name="provinces">

        <item>Alberta</item>

        <item>British Columbia</item>

        <item>Ontario</item>

        <item>Quebec</item>

        <item>Manitoba</item>

        <item>New Brunswick</item>

        <item>Newfoundland and Labrador</item>

        <item>Northwest Territories</item>

        <item>Nova Scotia</item>

        <item>Nunavut</item>

        <item>Prince Edward Island</item>

        <item>Saskatchewan</item>

        <item>Yukon</item>

    </string-array>

    <string name="enter_postalCode">Postal Code</string>

    <string name="enter_company_name">Company Name</string>

    <string name="edit_general_info">General Description</string>

    <string name="checkBox_license">Check if licensed service</string>

    <string name="btn_add_info">Add Info</string>

    <string name="info">Type Information Here</string>

    <string name="btn_view_current_bookings">View Current Bookings</string>
    <string name="btn_select_service">Select Service</string>
    <string name="btn_rate_serviceProv">Rate Service Providers</string>
    <string name="edit_ratings_comment">Review</string>
    <string name="btn_submit_rating">Submit Rating</string>
    <string name="txt_view_ratingsScore">Please enter a rating:</string>

    <string-array name="ratings">

        <item>1</item>

        <item>2</item>

        <item>3</item>

        <item>4</item>

        <item>5</item>

    </string-array>

</resources>
