<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/background" />

        <EditText
            android:id="@+id/edit_txt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_txt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
             />

        <TextView
            android:id="@+id/text_view_Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account_type" />

        <Spinner
            android:id="@+id/spinnerChoice"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:entries="@array/accountTypes"
            android:gravity="center"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/edit_txt_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_firstName"
            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/edit_txt_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:hint="@string/enter_lastName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_txt_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_phone"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/txt_view_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginhere"
            android:textColor="@color/design_default_color_primary_dark" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>