<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddAvailability">

    <TextView
        android:id="@+id/txt_view_weekdayChoice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/weekdayChoice"/>

    <Spinner
        android:id="@+id/spinnerWeekdays"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:entries="@array/weekdays" />

    <TextView
        android:id="@+id/txt_view_timeslotChoice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/timeSlotChoice"/>

    <Spinner
        android:id="@+id/spinnerTimeSlots"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:entries="@array/time_slots"
        />

    <Button
        android:id="@+id/btnSaveTimeSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/btn_save"
        />

    <TextView
        android:id="@+id/txt_view_ListOfAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_view_listOfAvailability"/>


    <ListView
        android:id="@+id/availability_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textAlignment="center" />
</LinearLayout>